Se modifico la etiqueta title y el meta description

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Gestión de Usuarios, con TheJuniors podrás controlar de una manera fácil y segura el acceso de tus usuarios y personal a tu sistema, por medio de las diversas opciones que ofrecemos."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>React App</title>
+    <title>Gestión de Usuarios - TheJuniors</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
